Fix the alignment of different control elements

--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -166,6 +166,7 @@ input.ui-select-search {
 }
 select.form-control {
   max-width: 550px;
+  margin-bottom: auto;
 }
 select.form-control.fixed {
   width: 150px;
